--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
         <input type="password" name="psd">
         <br>
         Fever API endpoint,for example:`http://localhost/fever/`:
-        <input type="text" name="endpoint">
+        <input type="text" name="endpoint" value="https://miniflux.1kbtool.com/fever/">
         <br>
         <button type='submit'>提交</button>
     </form>
